Done message with web socket
